# Westgard

IHMWestgard/: ERulesName.h  IHMWestgard.pro  IHMWestgard.pro.user.f4adc20  WestgardInterface.h  Westgard_Config.xml  configwindows.cpp  configwindows.h  evaluationwindows.cpp  evaluationwindows.h  main.cpp  mainwindows.cpp  mainwindows.h  updatewindows.cpp  updatewindows.h
Westguard-SSM/: .cproject  .gitignore  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  WESTGARD-SSM.cbp  Westgard_Config.xml  cmake_install.cmake
Westguard-SSM/.sonarlint/modules/westgard/issues/: index.pb
Westguard-SSM/src/: CMakeLists.txt  Makefile  WestgardInterface.cpp  WestgardInterface.h  Westgard_Config.xml  cmake_install.cmake  libWESTGARD-SSM.so.0.1
Westguard-SSM/src/Controller/: CMakeLists.txt  ERuleStatement.h  EUpdateResult.h  EWGResult.h  EvaluateController.cpp  EvaluateController.h  Makefile  Measure.cpp  Measure.h  RuleSetting.cpp  RuleSetting.h  WestgardConfiguration.cpp  WestgardConfiguration.h  WestgardResult.cpp  WestgardResult.h  cmake_install.cmake
Westguard-SSM/src/DataMapper/: CMakeLists.txt  IRulesDataMapper.h  Makefile  RulesDataMapper.cpp  RulesDataMapper.h  cmake_install.cmake
Westguard-SSM/src/Model/: CMakeLists.txt  IParameterizableRules.cpp  IParameterizableRules.h  IRule.cpp  IRule.h  Makefile  Rule_1_2s.cpp  Rule_1_2s.h  Rule_1_3s.cpp  Rule_1_3s.h  Rule_2_2s.cpp  Rule_2_2s.h  Rule_2of3_2s.cpp  Rule_2of3_2s.h  Rule_R_4s.cpp  Rule_R_4s.h  Rule_XT.cpp  Rule_XT.h  Rule_X_1s.cpp  Rule_X_1s.h  Rule_Xx.cpp  Rule_Xx.h  cmake_install.cmake
Westguard-SSM/src/test/: AllTest.cpp  CMakeLists.txt  EvaluateControllerTest.h  Makefile  RuleSettingTest.h  Rule_1_2sTest.h  Rule_1_3sTest.h  Rule_2_2sTest.h  Rule_2of3_2sTest.h  Rule_R_4sTest.h  Rule_XTTest.h  Rule_X_1sTest.h  Rule_XxTest.h  RulesDataMapperTest.h  Test  WestgardConfigurationTest.h  WestgardInterfaceTests.h  cmake_install.cmake
Westguard-SSM/third_parties/: Westgardlib-SSM.cmake
Westguard-SSM/third_parties/Markup/: CMakeLists.txt  Makefile  Markup.cpp  cmake_install.cmake
Westguard-SSM/third_parties/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
